Fixing spacing on H1 tags inside post content

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_typography.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_typography.scss
@@ -209,6 +209,7 @@ h3,
 		}
 	}
 
+	h1,
 	h2 {
 		font-size: 28px;
 		margin-top: 50px;
